--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,11 @@
  * OF ANY KIND, either express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
-
+ @import url("../blocks/custom/bakerybanner.css");
+ @import url("../blocks/custom/hover-items.css");
+ @import url("../blocks/custom/hero-cards.css");
+ @import url("../blocks/custom/action-card.css");
+ 
 :root {
   /* colors */
   --background-color: white;
@@ -181,7 +185,7 @@ button {
   line-height: 1.25;
   text-align: center;
   text-decoration: none;
-  background-color: var(--link-color);
+  background-color: black;
   color: var(--background-color);
   cursor: pointer;
   overflow: hidden;
@@ -193,7 +197,8 @@ a.button:hover,
 a.button:focus,
 button:hover,
 button:focus {
-  background-color: var(--link-hover-color);
+  background-color: white;
+  color: black;
   cursor: pointer;
 }
 
@@ -229,13 +234,12 @@ main img {
 
 /* sections */
 main > .section {
-  margin: 40px 0;
+  margin: 0px 0;
 }
 
 main > .section > div {
   max-width: 1200px;
   margin: auto;
-  padding: 0 24px;
 }
 
 main > .section:first-of-type {
@@ -244,7 +248,6 @@ main > .section:first-of-type {
 
 @media (width >= 900px) {
   main > .section > div {
-    padding: 0 32px;
   }
 }
 
