--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 footer {
-  background-color: var(--light-color);
+  background-color: #036141;
   font-size: var(--body-font-size-xs);
+  color: #FFFFFF;
 }
 
 footer .footer > div {
