adding hover item navigation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@
  */
 
  @import url("../blocks/custom/action-card.css");
+ @import url("../blocks/custom/hover-items.css");
 
 :root {
   /* colors */
