--- a/blocks/custom/action-card.css
+++ b/blocks/custom/action-card.css
@@ -5,8 +5,16 @@
     padding-bottom: 20px;
 }
 
+/* IMAGE ON LEFT */
+
+.action-card-left > div {
+    display: flex;
+    padding-top: 20px;
+}
+
+
 .action-card-right > div > div:first-child {
-    background-image: url(https://www.sobeys.com/wp-content/uploads/2023/06/Marble-Texture-Background.jpg);
+    background-image: url("https://www.sobeys.com/wp-content/uploads/2023/06/Marble-Texture-Background.jpg");
     width: 80%;
     height: 500px; /* Adjust height as needed */
     display: flex;
@@ -35,15 +43,10 @@
 
 
 
-/* IMAGE ON LEFT */
 
-.action-card-left > div {
-    display: flex;
-    padding-top: 20px;
-}
 
 .action-card-left > div > div:last-child {
-    background-image: url(https://www.sobeys.com/wp-content/uploads/2023/06/Marble-Texture-Background.jpg);
+    background-image: url("https://www.sobeys.com/wp-content/uploads/2023/06/Marble-Texture-Background.jpg");
     width: 90%;
     height: 450px; /* Adjust height as needed */
     display: flex;
