adding bakery banner

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@
  @import url("../blocks/custom/action-card.css");
  @import url("../blocks/custom/hero-card.css");
  @import url("../blocks/custom/hover-items.css");
+ @import url("../blocks/custom/bakerybanner.css");
 
 :root {
   /* colors */
