--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@
  @import url("../blocks/custom/hero-card.css");
  @import url("../blocks/custom/hover-items.css");
  @import url("../blocks/custom/bakerybanner.css");
+ @import url("../blocks/custom/cards-custom.css");
 
 :root {
   /* colors */
