fixed footer orientation

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,18 +4,41 @@ footer {
   color: #FFFFFF;
 }
 
-footer .footer > div {
-  margin: auto;
+footer .footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   max-width: 1200px;
-  padding: 40px 24px 24px;
+  margin: 0 auto;
+  padding: 40px 25px;
 }
 
-footer .footer p {
-  margin: 0;
+footer .footer > div {
+  flex: 1;
+  margin: 0 15px;
+  padding-bottom: 30px;
 }
 
-@media (width >= 900px) {
-  footer .footer > div {
-    padding: 40px 32px 24px;
-  }
+footer p, footer a {
+  font-size: 14px;
+  color: #FFFFFF;
+  text-align: left;
+}
+
+.footer-cta {
+  display: flex;
+  justify-content: space-between;
+  gap: 3px; /* Adjust the gap between flex items */
+  border-top: 1px solid lightgrey; /* Add a thin gray line above */
+  border-bottom: 0.5px solid lightgrey; /* Add a thin gray line below */
+  padding-top: 10px; /* Add some padding to make the line more visible */
+  padding-bottom: 10px; /* Add some padding to make the line more visible */
+}
+
+@media (max-width: 900px) {
+  footer .footer {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 20px;
+    }
 }
