--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -65,17 +65,9 @@ footer .footer {
 }
 
 .footer-mobile > div:last-child > div:last-child img {
-  width: 45px;
-  height: 45px;
-}
-
-.footer-mobile > div:last-child > div:last-child > div{
-  display: flex;
-}
-
-.footer-mobile > div:last-child > div:last-child > div img{
-  width: 45px;
-  height: 45px;
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
 }
 
 .footer-cta {
@@ -83,6 +75,7 @@ footer .footer {
   padding-left: 40px;
   gap: 30px;
   justify-content: space-evenly;
+  padding-bottom: 10px;
 }
 
 .footer-mobile > div:last-child > div:first-child{
@@ -106,4 +99,5 @@ footer .footer {
 .footer-support-links {
   border-top: solid 0.1px rgba(255, 255, 255, 0.444);
   font-size: 16px;
+  padding-top: 5px;
 }
